Fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .count {
-    font-size: 100px;
+    font-size: 75px;
     text-align: center;
 }
 
@@ -1605,8 +1605,8 @@ body {
   -webkit-align-items: baseline;
   -ms-flex-align: baseline;
   align-items: baseline;
-  height: 100vh;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   pointer-events: none;
   top: 0;
   width: 100%;
